# rust_training

2048/: Cargo.toml
2048/src/: app.rs  board.rs  main.rs  tile.rs
guessing_game/: Cargo.toml
test/: test.rs
