[package]
name = "rust-2048"
version = "0.1.0"
edition = "2021"
authors = ["kingauther33@gmail.com"]

[[bin]]

name = "rust-2048"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-serialize = "0.3"
rand = "0.8.5"
piston_window = "0.123.0"
pistoncore-sdl2_window = "0.68.0"
piston2d-opengl_graphics = "0.81.0"
